--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build --output public",
+    "build": "react-scripts build --output dist",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
